k8s/prometheus-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: promehteus-ingress-with-auth
  namespace: gitlab-managed-apps
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: promehteus-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    prometheus.io/probe: "true"
spec:
  tls:
    - hosts:
        - ""
      secretName: "-tls"
  rules:
  - host: ""
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-prometheus-server
          servicePort: 80
